--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "superagent": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
